# oxia-rust

./: .envrc  .gitignore  .license-header.txt  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md  SECURITY_AUDIT.md  ci.just  deny.toml  flake.nix  otel-instrumentation-design.md  renovate.json
.agent/rules/: project_memory.md
.config/: nextest.toml
.gemini_security/: SECURITY_ANALYSIS_TODO.md
.github/workflows/: docker-image.yml  renovate.yml  rust-build.yml  rust.yml  semgrep.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-06-02_09-57-23Z.md  2026-06-02_10-07-57Z.md  2026-06-02_10-36-02Z-review-the-code-changes.md  2026-06-02_17-00-27Z-a-previous-agent-produced.md  2026-06-02_18-08-53Z-criteria-correctness-maintainability-performance.md  2026-06-03_05-58-19Z-look-for-simplify-the.md  2026-06-03_18-11-30Z-find-latency-bucket-configuration.md  2026-06-03_21-21-46Z-examine-the-logs-in.md
client/: Cargo.toml  DISTRIBUTED_TRACING.md  GRPC_METRICS_SUMMARY.md  METRICS.md
client/benches/: channel_pool.rs  shard_lookup.rs
client/examples/: a.rs  c.rs  complete_metrics_integration.rs  distributed_tracing_example.rs  e.rs  grpc_metrics_example.rs  s.rs  t.rs
client/src/: batch_get.rs  config.rs  discovery.rs  errors.rs  instrumented_client.rs  lib.rs  metrics.rs  metrics_integration.rs  notification.rs  pool.rs  shard.rs  shard_with_metrics.rs  traced_client.rs  tracing_metrics.rs  util.rs
client/tests/: basic.rs  batch_get_tests.rs  cancellation_tests.rs  cluster_fixture_tests.rs  cluster_tests.rs  common.rs  distributed_tracing_test.rs  extsyms.rs  failover_tests.rs  leader_change_tests.rs  metrics_integration_test.rs  oxia_client_tests.rs  parameterized_tests.rs
client/tests/common/: mod.rs
cmd/: Cargo.toml
cmd/src/: commands.rs  context.rs  lib.rs  log.rs  main.rs  metrics.rs
cmd/src/commands/: batch_get.rs  completions.rs  delete.rs  delete_range.rs  get.rs  list.rs  mod.rs  notifications.rs  put.rs  range_scan.rs  sequence_updates.rs  shell.rs
cmd/src/metrics/: json.rs  om2.rs  otlp.rs
cmd/src/utils/: mod.rs  unicode.rs
common/: Cargo.toml  build.rs
common/proto/: UPSTREAM
common/scripts/: sync-proto
common/src/: lib.rs
crates/client/: Cargo.toml
crates/client/examples/: a.rs  c.rs  e.rs  s.rs  t.rs
crates/client/src/: config.rs  errors.rs  lib.rs  pool.rs  shard.rs  util.rs
crates/client/tests/: basic.rs
crates/client/tests/common/: mod.rs
crates/cmd/: Cargo.toml
crates/common/: Cargo.toml  build.rs
crates/common/proto/: UPSTREAM
crates/common/scripts/: sync-proto
crates/common/src/: lib.rs
crates/oxia-bin-util/: Cargo.toml  build.rs
crates/oxia-bin-util/go/: go.mod  go.sum  tools.go
crates/oxia-bin-util/src/: lib.rs
crates/server/: Cargo.toml
docs/: instrumentation.md
ext/: google-protos.version  oxia.version  update-google-protos  update-oxia
ext/oxia/: .gitignore
ext/oxia/cmd/: go.mod  go.sum
ext/oxia/common/: go.mod  go.sum
ext/oxia/common/constant/: constants.go
ext/oxia/oxia/: go.mod  go.sum
ext/oxia/oxiad/: go.mod  go.sum
misc/chats/: unicode-decode-chat.md
notes/: agy-design-chat  otel-instrumentation-design.md  otel_design_prompt_pixi.md  otel_design_prompt_v1.md  otel_design_prompt_v2.md  otel_design_prompt_v3.md  otel_design_prompt_v4.md  process.md
oxia-bin-util/: Cargo.toml  build.rs  update
oxia-bin-util/go/: go.mod  go.sum
oxia-bin-util/src/: lib.rs
