[workspace]
members = ["oxia-bin-util", "cmd", "client", "common"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
clone_on_ref_ptr = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"


[workspace.lints.rust]
private_interfaces = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(accept_invalid_shard_ids)",
] }

[profile.dev]
opt-level = 1       # Basic optimizations so async code isn't glacial
debug = "full"      # Maximum debug info for IDEs and GDB/LLDB
incremental = true  # Essential for fast "edit-compile-test" cycles
codegen-units = 256

[profile.release]
opt-level = 3
debug = true
split-debuginfo = "packed"
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

# CI build: exercises the optimiser at opt-level=3 without LTO, so that
# cargo-chef pre-compiled dep artifacts have valid fingerprints. Fat LTO
# forces the linker to reprocess all bitcode anyway, negating any caching.
# Assertions are on to catch bugs the optimiser can expose.
#
# NOTE: [profile.ci] in build/cargo-config.toml must mirror these settings
# exactly. cargo-chef cook runs outside the workspace and reads that file;
# CI builds run inside the workspace and read this file. Fingerprints must
# match or every CI build recompiles all dependencies.
# PR CI builds: dev opt-levels for fast compile, line-tables-only for useful
# stack traces without the cost of full debug info.
# NOTE: [profile.ci-debug] in build/cargo-config.toml must mirror these settings
# exactly — see the fingerprint warning in that file.
[profile.ci-debug]
inherits = "dev"
debug = "line-tables-only" # see build/cargo-config.toml — must match
incremental = false        # see build/cargo-config.toml — must match

[profile.ci-debug.package."*"]
opt-level = 3 # see build/cargo-config.toml — must match

[profile.ci]
inherits = "release"
strip = "none"
debug = "line-tables-only" # see build/cargo-config.toml — must match
lto = false                # see build/cargo-config.toml — must match
codegen-units = 16         # see build/cargo-config.toml — must match
debug-assertions = true    # see build/cargo-config.toml — must match
overflow-checks = true     # see build/cargo-config.toml — must match
