[workspace]
members = ["oxia-bin-util", "cmd", "client", "common"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
clone_on_ref_ptr = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"


[workspace.lints.rust]
private_interfaces = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(accept_invalid_shard_ids)",
] }

[profile.dev]
opt-level = 1       # Basic optimizations so async code isn't glacial
debug = "full"      # Maximum debug info for IDEs and GDB/LLDB
incremental = true  # Essential for fast "edit-compile-test" cycles
codegen-units = 256

[profile.release]
opt-level = 3
debug = true
split-debuginfo = "packed"
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

# CI-debug: Fast CI for PR validation. Optimized for compilation speed.
# Must match build/cargo-config.toml
[profile.ci-debug]
inherits = "dev"
debug = "line-tables-only" # Enough for backtraces, keeps compile fast
incremental = true         # Enables sccache, matches dev
codegen-units = 256        # Fast parallel compilation

[profile.ci-debug.package."*"]
opt-level = 3

# CI: Branch builds (main pushes). Slightly more optimized but still fast.
# Must match build/cargo-config.toml
[profile.ci]
inherits = "release"
debug = "line-tables-only"
lto = false                # LTO kills compile time, not needed for tests
incremental = true         # Enables sccache
codegen-units = 256        # Fast parallel compilation
opt-level = 2              # Good optimization, faster compile than 3
debug-assertions = true    # Catch bugs in CI
overflow-checks = true     # Catch arithmetic bugs
strip = "none"

# Test-release: Full optimizations plus assertions for catching release-only bugs.
# Must match build/cargo-config.toml
[profile.test-release]
inherits = "release"
debug = true            # Full debug info for accurate backtraces
debug-assertions = true # Keep assertions enabled (critical for bug catching)
overflow-checks = true  # Keep overflow checks
lto = false             # LTO too slow for CI, optimizations not needed for tests
codegen-units = 256     # Fast compilation
incremental = true      # Enable sccache
strip = "none"          # Keep symbols
