[workspace]
members = ["oxia-bin-util", "cmd", "client", "common"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
clone_on_ref_ptr = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"


[workspace.lints.rust]
private_interfaces = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(accept_invalid_shard_ids)",
] }

# The below is copied from build/cargo-config.toml.
# DO  NOT EDIT

# Cargo configuration installed into ${CARGO_HOME}/config.toml inside the
# build image.  cargo-chef cook runs outside the workspace directory and
# reads this file for profile settings; CI builds run inside the workspace
# and read workspace Cargo.toml instead.  The two sources are merged by
# Cargo with workspace Cargo.toml taking precedence.
#
# FINGERPRINT WARNING: For cargo-chef caching to survive into CI builds,
# the effective compiler flags for each cooked profile must be identical in
# both contexts.  Concretely:
#   - [profile.ci-debug] here must exactly match [profile.ci-debug] in Cargo.toml.
#   - [profile.ci] here must exactly match [profile.ci] in Cargo.toml.
#   - [profile.test-release] here must exactly match [profile.test-release] in Cargo.toml.
#   - [profile.release] here must exactly match [profile.release] in Cargo.toml
#     (because [profile.ci] and [profile.test-release] inherit from it).
# Update both files together whenever you change a profile.

# Goal: Fast compiles, but fast enough runtime to not be frustrated.
[profile.dev]
opt-level = 1       # Basic optimizations so async code isn't glacial
debug = "full"      # Maximum debug info for IDEs and GDB/LLDB
incremental = true  # Essential for fast "edit-compile-test" cycles
codegen-units = 256

# Optimize dependencies even in debug mode
[profile.dev.package."*"]
opt-level = 3 # Your code stays debuggable; tokio/hyper/serde run at 100% speed

# Must match workspace Cargo.toml
[profile.release]
opt-level = 3
debug = true
split-debuginfo = "packed"
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

# CI-debug: Fast CI for PR validation. Optimized for compilation speed.
# Must match workspace Cargo.toml
[profile.ci-debug]
inherits = "dev"
debug = "line-tables-only" # Enough for backtraces, keeps compile fast
incremental = true         # Enables sccache, matches dev
codegen-units = 256        # Fast parallel compilation

[profile.ci-debug.package."*"]
opt-level = 3

# CI: Branch builds (main pushes). Slightly more optimized but still fast.
# Must match workspace Cargo.toml
[profile.ci]
inherits = "release"
debug = "line-tables-only"
lto = false                # LTO kills compile time, not needed for tests
incremental = true         # Enables sccache
codegen-units = 256        # Fast parallel compilation
opt-level = 2              # Good optimization, faster compile than 3
debug-assertions = true    # Catch bugs in CI
overflow-checks = true     # Catch arithmetic bugs
strip = "none"

# Test-release: Full optimizations plus assertions for catching release-only bugs.
# Must match workspace Cargo.toml
[profile.test-release]
inherits = "release"
debug = true            # Full debug info for accurate backtraces
debug-assertions = true # Keep assertions enabled (critical for bug catching)
overflow-checks = true  # Keep overflow checks
lto = false             # LTO too slow for CI, optimizations not needed for tests
codegen-units = 256     # Fast compilation
incremental = true      # Enable sccache
strip = "none"          # Keep symbols
