[package]
name = "mauricebarnum-oxia-client"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"

[dependencies]
mauricebarnum-oxia-common = { path = "../common" }
tokio = { version = "1.49.0", features = ["sync", "rt", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.2", features = ["gzip", "channel", "zstd"] }
prost = "0.14.1" # If using Protobuf
thiserror = "2.0.17"
bytes = "1.11.0"
tracing = "0.1.44"
futures = "0.3.31"
getrandom = "0.3.4"
rand = "0.9.2"
xxhash-rust = { version = "0.8.15", default-features = false, features = [
    "xxh3",
] }
backon = "1.6.0"
arc-swap = "1.7"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
chrono = "0.4.42"
socket2 = "0.6.1"
test-log = { version = "0.2.19", features = ["trace", "color"] }
oxia-bin-util = { path = "../oxia-bin-util" }
tempfile = "3.24.0"
anyhow = "1.0.100"
itertools = "0.14.0"

[[bench]]
name = "shard_lookup"
harness = false

[lints]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(accept_invalid_shard_ids)",
] }


[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bytes::bytes::Bytes",
    "tonic::status::Status",
    "tonic::transport::error::Error",
    "futures_core::stream::Stream",
]
