[package]
name = "mauricebarnum-oxia-client"
version = "0.1.0"
publish = false
edition.workspace = true
license = "Apache-2.0"

[dependencies]
mauricebarnum-oxia-common = { path = "../common" }
http = "1"
tokio = { version = "1.52.3", features = ["sync", "rt", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.6", features = ["gzip", "channel", "zstd"] }
thiserror = "2.0.18"
bytes = "1.12.0"
tracing = "0.1.44"
futures-core = "0.3.32"
futures-util = "0.3.32"
getrandom = "0.4.3"
rand = "0.10.2"
xxhash-rust = { version = "0.8.16", default-features = false, features = [
    "xxh3",
] }
backon = "1.6.0"
arc-swap = "1.9"
tokio-util = "0.7.18"
bon = { version = "3.9.3", features = ["implied-bounds"] }
dashmap = { version = "6", optional = true }
fastrand = "2.4.1"
prost = "0.14.4"
prost-types = "0.14.4"
opentelemetry = { version = "0.32.0", features = ["metrics"], optional = true }

[features]
bench-dashmap = ["dep:dashmap"]
go-metrics-compat = ["metrics"]
metrics = ["dep:opentelemetry"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
chrono = "0.4.45"
socket2 = "0.6.4"
test-log = { version = "0.2.21", features = ["trace", "color"] }
oxia-bin-util = { path = "../oxia-bin-util" }
tempfile = "3.27.0"
anyhow = "1.0.103"
itertools = "0.15.0"
nix = { version = "0.31", default-features = false, features = ["signal"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = [
    "metrics",
    "testing",
] }

[[bench]]
name = "shard_lookup"
path = "benches/shard_lookup.rs"
harness = false

[[bench]]
name = "channel_pool"
path = "benches/channel_pool.rs"
harness = false

[lints]
workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bytes::bytes::Bytes",
    "tonic::status::Status",
    "tonic::transport::error::Error",
    "futures_core::future::BoxFuture",
    "futures_core::stream::BoxStream",
    "futures_core::stream::Stream",
    "bon::builder_state::IsSet",
    "bon::builder_state::IsUnset",
    "opentelemetry::metrics::meter::MeterProvider",
]
