[package]
name = "mauricebarnum-oxia-cmd"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"

[[bin]]
name = "oxia-cmd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
futures = "0.3.31"
hex = "0.4.3"
humantime = "2.3.0"
mauricebarnum-oxia-client = { path = "../client" }
mauricebarnum-oxia-common = { path = "../common" }
num_cpus = "1.17.0"
rustyline = "17.0.2"
shlex = "1.3.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints]
workspace = true
