[package]
name = "mauricebarnum-oxia-cmd"
version = "0.1.0"
publish = false
edition.workspace = true
license = "Apache-2.0"

[features]
default = ["otlp-json-compat"]
otlp-json-compat = []

[[bin]]
name = "oxia-cmd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
futures-util = "0.3.32"
hex = "0.4.3"
humantime = "2.4.0"
mauricebarnum-oxia-client = { path = "../client", features = ["metrics"] }
num_cpus = "1.17.0"
opentelemetry = { version = "0.32.0", default-features = false }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = [
    "metrics",
] }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = [
    "gen-tonic-messages",
    "metrics",
    "with-serde",
] }
prost = "0.14.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rustyline = "18.0.1"
shlex = "2.0.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = [
    "metrics",
    "testing",
] }
