[package]
name = "mauricebarnum-oxia-common"
version = "0.1.0"
publish = false
edition.workspace = true
license = "Apache-2.0"

[dependencies]
bytes = "1.11.0"
prost = "0.14.1"                                                       # If using Protobuf
prost-types = "0.14.1"
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14.2", features = ["gzip", "channel", "zstd"] }
tonic-prost = "0.14.2"

[build-dependencies]
prost-build = "0.14.1"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[lints.clippy]
all = "allow"
pedantic = "allow"
