[package]
name = "mauricebarnum-oxia-common"
version = "0.1.0"
publish = false
edition.workspace = true
license = "Apache-2.0"

[dependencies]
bytes = "1.11.1"
prost = "0.14.3"                                                       # If using Protobuf
prost-types = "0.14.3"
tonic = { version = "0.14.4", features = ["gzip", "channel", "zstd"] }
tonic-prost = "0.14.4"

[build-dependencies]
prost-build = "0.14.3"
tonic-build = "0.14.4"
tonic-prost-build = "0.14.4"

[lints.clippy]
all = "allow"
pedantic = "allow"
