[package]
name = "mauricebarnum-oxia-common"
version = "0.1.0"
publish = false
edition.workspace = true
license = "Apache-2.0"

[dependencies]
bytes = "1.11.1"
prost = "0.14.3"                                                       # If using Protobuf
tonic = { version = "0.14.5", features = ["gzip", "channel", "zstd"] }
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"

[lints.clippy]
all = "allow"
pedantic = "allow"
