[package]
name = "mauricebarnum-oxia-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
mauricebarnum-oxia-common = { path = "../common" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3.31"
tracing.workspace = true
tracing-subscriber.workspace = true

async-once-cell = "0.5.4"
async-trait = "0.1.86"
chrono = "0.4.40"
futures = "0.3.31"
getrandom = "0.3.2"
lazy_static = "1.5.0"
rand = "0.9.1"
xxhash-rust = { version = "0.8.15", default-features = false, features = [
  "xxh3",
] }
