[package]
name = "mauricebarnum-oxia-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
mauricebarnum-oxia-common = { path = "../common" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tonic-tls = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3.31"
tracing.workspace = true
tracing-subscriber.workspace = true

async-trait = "0.1.88"
futures = "0.3.31"
getrandom = "0.3.3"
lazy_static = "1.5.0"
rand = "0.9.1"
xxhash-rust = { version = "0.8.15", default-features = false, features = [
  "xxh3",
] }
itertools = "0.14.0"
tempfile = "3.20.0"
tokio-retry = "0.3"

[dev-dependencies]
chrono = "0.4.41"
socket2 = "0.6.0"
test-log = { version = "0.2.18", features = ["trace", "color"] }
oxia-bin-util = { path = "../oxia-bin-util" }

[lints]
workspace = true
