[package]
name = "mauricebarnum-oxia-common"
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
glob = "0.3.2"
prost-build = { workspace = true }
tonic-build = { workspace = true }
